--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "stripe-backend",
   "version": "1.0.0",
+  "description": "Stripe payment gateway for event inscriptions",
   "main": "stripe.js",
   "type": "module",
+  "scripts": {
+    "start": "node stripe.js",
+    "dev": "node --watch stripe.js"
+  },
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "stripe": "^12.0.0"
+    "stripe": "^14.9.0"
   }
 }
